--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "express-jwt": "^8.4.1",
     "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.22.0",
     "socket.io": "^4.7.2"
   },
