--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
+    "csb-inspector": "^0.3.2",
     "dotenv": "16.3.1",
     "express": "^4.21.1",
     "express-jwt": "^8.4.1",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.22.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
