--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -37,7 +40,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "sharp": "^0.32.6",
-    "socket.io-client": "^4.7.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
