--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.455.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
+    "next-themes": "^0.4.3",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
