refactor: update frontend configuration and dependencies, remove unused files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "organizapp",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,46 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.34.2",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "autoprefixer": "10.4.15",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.455.0",
-    "next": "^15.0.3",
-    "next-auth": "^4.24.10",
-    "next-themes": "^0.4.3",
-    "nodemailer": "^6.9.5",
-    "pg": "^8.11.3",
-    "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-calendar": "^4.6.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "sharp": "^0.32.6",
-    "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "webpack": "^5.96.1"
+    "lucide-react": "^0.477.0",
+    "next": "15.2.1",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
+    "postcss": "^8.5.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^13.5.6"
+    "@tailwindcss/postcss": "^4.0.9",
+    "tailwindcss": "^4.0.9"
   }
 }
