--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
-SECRET_KEY=""
-PORT=""
-DATABASE_URL=""
+SECRET_KEY="losgatitos son los mejores"
+PORT="4000"
+DATABASE_URL=postgresql://janedoe:mypassword@localhost:5432/mydb
