--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "echo \"No tests configured\""
   },
   "dependencies": {
+    "nodemailer": "^6.10.0",
     "styled-components": "^6.1.0"
   }
 }
