--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,7 @@
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.1",
