--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,13 +13,17 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.13",
     "@radix-ui/react-tooltip": "^1.1.8",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.10.1",
     "lucide-react": "^0.477.0",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
@@ -27,9 +31,12 @@
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.6.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5"
