--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.13",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,20 +30,16 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-big-calendar": "^1.18.0",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.6.1",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
-    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/postcss": "^4.1.6",
     "tailwindcss": "^4.0.9"
   }
 }
