--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -34,6 +34,7 @@
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.6.1",
     "react-dom": "^19.0.0",
+    "resend": "^4.5.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
